--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ServerRegister"
         android:usesCleartextTraffic="true">
-        <activity android:name=".AuthenticationActivity"></activity>
+        <activity android:name=".StartActivity"></activity>
+        <activity android:name=".AuthenticationActivity" />
 
         <meta-data
             android:name="com.google.android.actions"
