Добавил форму создания заявки с listview и отправки данных формы на сервер для сохранения заявки в БД

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -53,5 +54,4 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-
 }
