Добавил отображение заявкок о помощи (только где учавствует волонтер, для автора заявки, по типу, по адресу и дате). Добавли классы по работе с фотоотчетами

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ServerRegister"
         android:usesCleartextTraffic="true">
-        <activity android:name=".RequestForHelpActivity"></activity>
+        <activity android:name=".QuestByParametersActivity"></activity>
+        <activity android:name=".RequestForHelpActivity" />
         <activity android:name=".UnsuccessfulAythenticationActivity" />
         <activity
             android:name=".RequestCreationStageActivity"
